# snap-epa-orchestrator

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/workflows/: TiCS.yml  build-and-test.yml  tests.yml  tics.yml
epa_orchestrator/: __init__.py  allocations_db.py  cpu_pinning.py  daemon_handler.py  hugepages_db.py  memory_manager.py  schemas.py  utils.py
scripts/: allocate_cores.py  list_allocations.py
snap/: snapcraft.yaml
snap/hooks/: configure
tests/: README.md  SUMMARY.md  __init__.py  conftest.py  test_base.py  test_functional.py
tests/functional/: conftest.py  test_socket_api.py
tests/hurl/: allocate_cores.hurl
tests/integration/: __init__.py  test_socket_communication.py
tests/scripts/: actionutils.sh
tests/unit/: __init__.py  test_allocations_db.py  test_cpu_pinning.py  test_daemon_integration.py  test_memory_manager_numa.py  test_schemas.py  test_utils.py
