# Copyright 2022 Canonical Ltd.
# See LICENSE file for licensing details.

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "pbr>=2.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "epa-orchestrator"
version = "2025.1"
requires-python = "~=3.10.0"
license-files = ["LICENSE"]
description = "Introspection service"
readme = "README.md"
authors = [{ name = "Canonical", email = "openstack-charmers@lists.launchpad.net" }]
classifiers = [
    "Environment :: OpenStack",
    "Environment :: Web Environment",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operation System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "snap-helpers @ git+https://github.com/albertodonato/snap-helpers@46803aa9d52cc0bb24f76df878dd1010fc08e6a0",
    "pydantic",
    "cryptography>=38.0.0,<42,!=40.0.0,!=40.0.1",  # PyOpenSSL requirements
]

[project.optional-dependencies]
dev= [
    "coverage[toml]",
    "pytest",
    "pytest-mock",
]

[project.urls]
"Homepage" = "https://github.com/canonical/snap-epa-orchestrator"
"Bug Reports" = "https://github.com/canonical/snap-epa-orchestrator/issues"


[tool.setuptools]
packages = ["epa_orchestrator"]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
profile = "black"

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = [
    "tests/*:D100,D101,D102,D103,D104",
    "setup.py:D100",
    "openstack_hypervisor/*:D100",
    "openstack_hypervisor/__init__.py:D104,C801"
]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "(?i)# SPDX-FileCopyrightText:\\s\\d{4}(-(\\d{4}|present))*"
#copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
